--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -24,19 +24,16 @@
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
         <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
-		<link rel="stylesheet" media="screen" href="/css/screen.css" />
-		
-		<link rel="icon" type="image/png" href="/images/favicon.png" />
-		
-			<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+<script>				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 				ga('create', 'UA-131533286-1', 'auto');
 				ga('send', 'pageview');
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
-			<meta property="og:locale" content="id_ID" />
-		
-	</head>
+<style>
+nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
+nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; letter-spacing:1px; font-size:.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+</style>
+</head>
 	<body>
 		<nav>
 	
