--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id-ID">
-	
 	<head>
 	    <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -225,16 +224,29 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
 nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; letter-spacing:1px; font-size:.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
-
+span.wave {
+  animation-name: wave-animation;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+  display: inline-block;
+}
+@keyframes wave-animation {
+    0% { transform: rotate(  0.0deg) }
+   10% { transform: rotate(-10.0deg) }
+   20% { transform: rotate( 12.0deg) }
+   30% { transform: rotate(-10.0deg) }
+   40% { transform: rotate(  9.0deg) }
+   50% { transform: rotate(  0.0deg) }
+  100% { transform: rotate(  0.0deg) }
+}
 </style>
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
                 <link rel="icon" type="image/png" href="/favicon.png" />
                 <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
-
-		<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+<script>				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 				ga('create', 'UA-131533286-1', 'auto');
 				ga('send', 'pageview');
 		</script>
@@ -283,12 +295,12 @@ p.small {
 }
 </style>
 	<div class="page-header"> 
-         <h1>Sewa Motor Jogja,Rental Mobil Yogya,Penginapan Yogyakarta</h1>
+         <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	</p><h3><q>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
-<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><hr>
+<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><span class="wave">👋</span><hr>
 		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp" class="lazyload" /></p>
 	</div>
 <div class="testimonials">
